--- a/src/containers/AppContainer/global.css
+++ b/src/containers/AppContainer/global.css
@@ -1,7 +1,14 @@
 html, body, #root {
   height: 100%;
+}
+
+body {
+  padding: 0;
+  margin: 0;
   top: 0; right: 0;
   bottom: 0; left: 0;
   position: fixed;
   overflow: hidden;
+  color: #fff;
+  font-family: 'Open Sans', serif;
 }
